Replaced Bootstrap image gallery with 'blueimp Gallery'. It's considerably more intuitive.

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -607,6 +607,28 @@
     <None Include="Content\fonts\raw\lte-ie7.js" />
     <None Include="Content\fonts\raw\style.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\image-gallery\css\blueimp-gallery-custom.css" />
+    <Content Include="Content\image-gallery\css\blueimp-gallery-indicator.css" />
+    <Content Include="Content\image-gallery\css\blueimp-gallery-video.css" />
+    <Content Include="Content\image-gallery\css\blueimp-gallery.css" />
+    <Content Include="Content\image-gallery\css\blueimp-gallery.min.css" />
+    <Content Include="Content\image-gallery\img\error.png" />
+    <Content Include="Content\image-gallery\img\error.svg" />
+    <Content Include="Content\image-gallery\img\loading.gif" />
+    <Content Include="Content\image-gallery\img\play-pause.png" />
+    <Content Include="Content\image-gallery\img\play-pause.svg" />
+    <Content Include="Content\image-gallery\img\video-play.png" />
+    <Content Include="Content\image-gallery\img\video-play.svg" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery-fullscreen.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery-indicator.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery-video.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery-vimeo.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery-youtube.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery.js" />
+    <Content Include="Content\image-gallery\js\blueimp-gallery.min.js" />
+    <Content Include="Content\image-gallery\js\blueimp-helper.js" />
+    <Content Include="Content\image-gallery\js\jquery.blueimp-gallery.js" />
+    <Content Include="Content\image-gallery\js\jquery.blueimp-gallery.min.js" />
     <Content Include="Content\Images\default-image.jpg" />
     <Content Include="Content\Images\smartstore.net-200-black.png" />
     <Content Include="Content\Images\smartstore.net-200-white.png" />
@@ -705,6 +727,8 @@
     <Content Include="Media\Thumbs\placeholder.txt" />
     <Content Include="Media\Uploaded\placeholder.txt" />
     <Content Include="Refresh.html" />
+    <Content Include="Scripts\2012.2.607\jquery-1.7.1.min.js" />
+    <Content Include="Scripts\2012.2.607\telerik.textbox.min.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.af-ZA.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.af.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.am-ET.js" />
@@ -1148,7 +1172,6 @@
     <Content Include="Content\bootstrap\js\bootstrap-transition.js" />
     <Content Include="Content\bootstrap\js\bootstrap-typeahead.js" />
     <Content Include="Content\bootstrap\custom\image-gallery.less" />
-    <Content Include="Content\bootstrap\js\custom\bootstrap-image-gallery.js" />
     <Content Include="Content\bootstrap\custom\images\loading.gif" />
     <Content Include="Content\fileupload\fileupload.css" />
     <Content Include="Content\fileupload\images\loading.gif" />
@@ -1432,7 +1455,6 @@
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\load-image.js" />
     <Content Include="Scripts\public.shopbar.js" />
     <Content Include="Scripts\select2.min.js" />
     <Content Include="Scripts\smartstore.eventbroker.js" />
@@ -1634,7 +1656,6 @@
     <Content Include="Views\Product\_Price.Mobile.cshtml" />
     <Content Include="Views\Product\_ReviewHelpfulness.Mobile.cshtml" />
     <Content Include="Views\Product\_SKU_Man_Stock.cshtml" />
-    <Content Include="Views\Shared\BsImageDialog.cshtml" />
     <Content Include="Views\Shared\ConfigureTheme.cshtml" />
     <Content Include="Views\Shared\Header.Mobile.cshtml" />
     <Content Include="Views\Shared\_Checkout.cshtml" />
