UI optimization & cleanup

--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -83,7 +83,7 @@
       
     <siteMapNode id="configuration" title="Configuration" resKey="Admin.Configuration" permissionNames="ManageCountries,ManageLanguages,ManageSettings,ManagePaymentMethods,ManageTaxSettings,ManageShippingSettings,ManageCurrencies,ManageDeliveryTimes,ManageMeasures,ManageActivityLog,ManageACL,ManageSMSProviders,ManageEmailAccounts,ManageThemes,ManagePlugins"
        iconClass="sm-icon-cog-2" imageUrl="~/Administration/Content/images/ap-settings-white.png">
-      <siteMapNode id="settings" iconClass="fa-gear" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
+      <siteMapNode id="settings" iconClass="fa-sliders" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
         <siteMapNode id="general-settings" title="General and common settings" resKey="Admin.Configuration.Settings.GeneralCommon" controller="Setting" action="GeneralCommon" area="Admin" />
         <siteMapNode id="catalog-settings" title="Catalog settings" resKey="Admin.Configuration.Settings.Catalog" controller="Setting" action="Catalog" area="Admin" />
         <siteMapNode id="customer-settings" title="Customer and user settings" resKey="Admin.Configuration.Settings.CustomerUser" controller="Setting" action="CustomerUser" area="Admin" />
@@ -137,7 +137,7 @@
     <siteMapNode id="system" title="System" resKey="Admin.System" iconClass="sm-icon-database" imageUrl="~/Administration/Content/images/ap-system-white.png">
       <siteMapNode id="system-log" iconClass="fa-bolt" title="Log" resKey="Admin.System.Log" permissionNames="ManageSystemLog" controller="Log" action="List" area="Admin" />
       <siteMapNode id="queued-emails" iconClass="fa-envelope" title="Queued emails" resKey="Admin.System.QueuedEmails" permissionNames="ManageMessageQueue" controller="QueuedEmail" action="List" area="Admin" />
-      <siteMapNode id="maintenance" iconClass="fa-wrench" title="Maintenance" resKey="Admin.System.Maintenance" permissionNames="ManageMaintenance" controller="Common" action="Maintenance" area="Admin" />
+      <siteMapNode id="maintenance" iconClass="fa-database" title="Maintenance" resKey="Admin.System.Maintenance" permissionNames="ManageMaintenance" controller="Common" action="Maintenance" area="Admin" />
       <siteMapNode id="scheduled tasks" iconClass="fa-clock-o" title="Schedule tasks" resKey="Admin.System.ScheduleTasks" permissionNames="ManageScheduleTasks" controller="ScheduleTask" action="List" area="Admin" />
       <siteMapNode id="seo-names" iconClass="fa-search" title="Search engine friendly names" resKey="Admin.System.SeNames" permissionNames="ManageMaintenance" controller="Common" action="SeNames" area="Admin" />
       <siteMapNode id="warnings" iconClass="fa-exclamation-triangle" title="Warnings" resKey="Admin.System.Warnings" controller="Common" action="Warnings" area="Admin" />
