--- a/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
+++ b/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
@@ -155,6 +155,10 @@
     <Compile Include="Data\Migrations\201403112356126_Initial.Designer.cs">
       <DependentUpon>201403112356126_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201408020941244_IsTouched.cs" />
+    <Compile Include="Data\Migrations\201408020941244_IsTouched.Designer.cs">
+      <DependentUpon>201408020941244_IsTouched.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Domain\GoogleProductRecord.cs" />
@@ -194,6 +198,9 @@
     <Content Include="Views\FeedFroogle\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Data\Migrations\201408020941244_IsTouched.resx">
+      <DependentUpon>201408020941244_IsTouched.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\mc_logo.png">
@@ -241,7 +248,7 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="$(SolutionDir)\FixRazorIntellisense.targets" Condition="'$(Configuration)' == 'PluginDev'" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
