#164 Add multistore support for polls

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\201407191010096_BetterReturnRequest.Designer.cs">
       <DependentUpon>201407191010096_BetterReturnRequest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201408071158147_MultistorePoll.cs" />
+    <Compile Include="Migrations\201408071158147_MultistorePoll.Designer.cs">
+      <DependentUpon>201408071158147_MultistorePoll.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -360,6 +364,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201407191010096_BetterReturnRequest.resx">
       <DependentUpon>201407191010096_BetterReturnRequest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408071158147_MultistorePoll.resx">
+      <DependentUpon>201408071158147_MultistorePoll.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
