--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1849,6 +1849,12 @@
     <Content Include="Themes\Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semibold.eot" />
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semibold.ttf" />
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semibold.woff" />
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semilight.eot" />
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semilight.ttf" />
+    <Content Include="Themes\Alpha\Content\fonts\segoeui-semilight.woff" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\x-editable\css\" />
