--- a/src/Plugins/SMS.Clickatell/SmartStore.Plugin.SMS.Clickatell.csproj
+++ b/src/Plugins/SMS.Clickatell/SmartStore.Plugin.SMS.Clickatell.csproj
@@ -85,6 +85,7 @@
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
