--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -6,6 +6,7 @@
   <package id="ImageResizer" version="3.4.2" targetFramework="net45" />
   <package id="ImageResizer.Plugins.PrettyGifs" version="3.4.2" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.0" targetFramework="net45" />
+  <package id="MaxMind.GeoIP" version="2.1.17" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
