--- a/src/Presentation/SmartStore.Web/Administration/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Web.config
@@ -48,6 +48,7 @@
         <add namespace="SmartStore.Core.Events" />
         <add namespace="SmartStore.Core.Infrastructure" />
         <add namespace="SmartStore.Web.Framework" />
+        <add namespace="SmartStore.Web.Framework.Mvc" />
         <add namespace="SmartStore.Web.Framework.Events" />
         <add namespace="SmartStore.Web.Framework.UI" />
         <add namespace="SmartStore.Web.Framework.UI.Captcha" />
