Redesigned backend a bit to be more flat

--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -84,7 +84,7 @@
 
       
     <siteMapNode id="configuration" title="Configuration" resKey="Admin.Configuration" permissionNames="ManageCountries,ManageLanguages,ManageSettings,ManagePaymentMethods,ManageTaxSettings,ManageShippingSettings,ManageCurrencies,ManageDeliveryTimes,ManageMeasures,ManageActivityLog,ManageACL,ManageSMSProviders,ManageEmailAccounts,ManageThemes,ManagePlugins"
-       iconClass="gear" imageUrl="~/Administration/Content/images/ap-settings-white.png">
+       iconClass="sliders" imageUrl="~/Administration/Content/images/ap-settings-white.png">
       <siteMapNode id="settings" iconClass="sliders" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
         <siteMapNode id="general-settings" title="General and common settings" resKey="Admin.Configuration.Settings.GeneralCommon" controller="Setting" action="GeneralCommon" area="Admin" />
         <siteMapNode id="catalog-settings" title="Catalog settings" resKey="Admin.Configuration.Settings.Catalog" controller="Setting" action="Catalog" area="Admin" />
