--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -103,7 +103,7 @@
     <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
-    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
+    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="false">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
