* Implemented provider edit, configuration & drag/drop sorting * Made several ui optimizations

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -154,6 +154,7 @@
     <Compile Include="IActivatable.cs" />
     <Compile Include="Plugins\IConfigurable.cs" />
     <Compile Include="Plugins\Providers\DisplayOrderAttribute.cs" />
+    <Compile Include="Plugins\Providers\IUserEditable.cs" />
     <Compile Include="Plugins\Providers\IProvider.cs" />
     <Compile Include="Plugins\Providers\IProviderManager.cs" />
     <Compile Include="Plugins\Providers\ProviderMetadata.cs" />
