--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -133,7 +133,6 @@
       
       <siteMapNode isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="themes" iconClass="picture-o" title="Themes" resKey="Admin.Configuration.Themes" permissionNames="ManageThemes" controller="Theme" action="List" area="Admin"/>
-      <siteMapNode id="plugins" iconClass="puzzle-piece" title="Plugins" resKey="Admin.Configuration.Plugins" permissionNames="ManagePlugins" controller="Plugin" action="List" area="Admin"/>
     </siteMapNode>
 
     <siteMapNode id="system" title="System" resKey="Admin.System" iconClass="database" imageUrl="~/Administration/Content/images/ap-system-white.png">
@@ -145,6 +144,8 @@
       <siteMapNode id="warnings" iconClass="exclamation-triangle" title="Warnings" resKey="Admin.System.Warnings" controller="Common" action="Warnings" area="Admin" />
       <siteMapNode isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="system-info" iconClass="info-circle" title="System information" resKey="Admin.System.SystemInfo" controller="Common" action="SystemInfo" area="Admin" />
+      <siteMapNode isGroupHeader="true" title="[SKIP]" />
+      <siteMapNode id="plugins" iconClass="puzzle-piece" title="Plugins" resKey="Admin.Configuration.Plugins" permissionNames="ManagePlugins" controller="Plugin" action="List" area="Admin"/>
     </siteMapNode>
     
   </siteMapNode>
