--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -206,7 +206,7 @@
     <Compile Include="Catalog\ProductAttributeParser.cs" />
     <Compile Include="Cms\IWidget.cs" />
     <Compile Include="Cms\IWidgetService.cs" />
-    <Compile Include="Cms\WidgetExtentions.cs" />
+    <Compile Include="Cms\WidgetExtensions.cs" />
     <Compile Include="Cms\WidgetService.cs" />
     <Compile Include="Cms\IWidgetPlugin.cs" />
     <Compile Include="CommonServices.cs" />
